--- a/pod/perlhist.pod
+++ b/pod/perlhist.pod
@@ -697,6 +697,7 @@ the strings?).
 
  Sawyer X  5.33.0       2020-Jul-17     The 5.33 development track
  Ether     5.33.1       2020-Aug-20
+ Sawyer X  5.33.2       2020-Sep-20
 
 =head2 SELECTED RELEASE SIZES
 
