--- a/Porting/epigraphs.pod
+++ b/Porting/epigraphs.pod
@@ -17,6 +17,13 @@ Consult your favorite dictionary for details.
 
 =head1 EPIGRAPHS
 
+=head2 v5.33.2 - Elizabeth Warren
+
+Announced on 2020-09-20 by Sawyer X
+
+  What I've learned is that real change is very, very hard. But I've
+  also learned that change is possible - if you fight for it.
+
 =head2 v5.33.1 - Aleksandr Solzhenitsyn, The Gulag Archipelago 1918-1956 (1973)
 
 Announced on 2020-08-20 by Karen Etheridge
