--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -125,6 +125,10 @@ XXX Remove this section if not applicable.
 
 =item *
 
+L<Module::CoreList> has been upgraded from version 5.20200920 to 5.20201020.
+
+=item *
+
 L<XXX> has been upgraded from version A.xx to B.yy.
 
 If there was something important to note about this change, include that here.
