--- a/Porting/release_schedule.pod
+++ b/Porting/release_schedule.pod
@@ -42,7 +42,13 @@ you should reset the version numbers to the next blead series.
   2020-07-17  5.33.0 ✓       Sawyer X
   2020-08-20  5.33.1 ✓       Karen Etheridge
   2020-09-20  5.33.2 ✓       Sawyer X
-  2020-10-20  5.33.3
+  2020-10-20  5.33.3         Steve Hay
+  2020-11-20  5.33.4
+  2020-12-20  5.33.5
+  2021-01-20  5.33.6
+  2021-02-20  5.33.7         Renee Backer
+  2021-03-20  5.33.8
+  2021-04-20  5.33.9
 
 =head1 VICTIMS
 
