--- a/AUTHORS
+++ b/AUTHORS
@@ -1124,6 +1124,7 @@ Salvador Ortiz Garcia          <sog@msg.com.mx>
 Sam Kimbrel                    <kimbrel@me.com>
 Sam Tregar                     <sam@tregar.com>
 Sam Vilain                     <sam@vilain.net>
+Samanta Navarro                <ferivoz@riseup.net>
 Samuel Smith                   <esaym@cpan.org>
 Samuel Thibault                <sthibault@debian.org>
 Samuli Kärkkäinen              <skarkkai@woods.iki.fi>
