--- a/pod/perlpacktut.pod
+++ b/pod/perlpacktut.pod
@@ -1033,7 +1033,7 @@ C standardese).
 Neither using offsets nor adding C<x>'s to bridge the gaps is satisfactory.
 (Just imagine what happens if the structure changes.) What we really need
 is a way of saying "skip as many bytes as required to the next multiple of N".
-In fluent Templatese, you say this with C<x!N> where N is replaced by the
+In fluent templates, you say this with C<x!N> where N is replaced by the
 appropriate value. Here's the next version of our struct packaging:
 
   my $gappy = pack( 'c x!2 s c x!4 l!', $c1, $s, $c2, $l );
