--- a/AUTHORS
+++ b/AUTHORS
@@ -1220,6 +1220,7 @@ SynaptiCAD, Inc.               <sales@syncad.com>
 Sébastien Aperghis-Tramoni     <sebastien@aperghis.net>
 Sérgio Durigan Júnior          <sergiodj@linux.vnet.ibm.com>
 Tadeusz Sośnierz               <tadeusz.sosnierz@onet.pl>
+Takai Kousuke                  <62541129+t-a-k@users.noreply.github.com>
 Takis Psarogiannakopoulos      <takis@xfree86.org>
 Taro KAWAGISHI
 Tassilo von Parseval           <tassilo.parseval@post.rwth-aachen.de>
