--- a/pod/perlhack.pod
+++ b/pod/perlhack.pod
@@ -76,7 +76,7 @@ Create a GitHub fork of the perl5 repository and add it as a remote,
 if you haven't already, as described in the GitHub documentation at
 L<https://help.github.com/en/articles/working-with-forks>.
 
-  % git remote add fork git@github.com:MyUser/perl5.git
+  % git remote add fork https://github.com/MyUser/perl5.git
 
 Then, push your new branch to your fork.
 
