Remove EOL Windows Versions.
As discussed on the mailing list here:
https://www.nntp.perl.org/group/perl.perl5.porters/2020/10/msg258453.html

This just removes the declaration that we support the very old versions
of Windows that have long since been EOLed.

For reference of problems related to maintaining the EOLed versions:
https://github.com/Perl/perl5/issues/4145
https://github.com/Perl/perl5/issues/6080
https://github.com/Perl/perl5/issues/7410
https://github.com/Perl/perl5/issues/8502
https://github.com/Perl/perl5/issues/9025
https://github.com/Perl/perl5/issues/12431
https://github.com/Perl/perl5/issues/14687

--- a/pod/perlport.pod
+++ b/pod/perlport.pod
@@ -2251,17 +2251,15 @@ at L<http://www.cpan.org/src>
 
 =over
 
-=item Windows 2000
-
-=item Windows XP
-
-=item Windows Server 2003
-
-=item Windows Vista
-
-=item Windows Server 2008
+=item Windows Server 2008/R2
 
 =item Windows 7
+
+=item Windows Server 2012
+
+=item Windows 8
+
+=item Windows 10
 
 =back
 
@@ -2372,6 +2370,14 @@ have worked in 5.12, but supporting code has been removed for 5.14:
 =item Windows ME
 
 =item Windows NT4
+
+=item Windows 2000
+
+=item Windows XP
+
+=item Windows Server 2003
+
+=item Windows Vista
 
 =back
 
