--- a/pod/perlport.pod
+++ b/pod/perlport.pod
@@ -2344,6 +2344,24 @@ ensure you have that library installed when building perl.
 
 =head1 EOL Platforms
 
+=head2 (Perl 5.34)
+
+The following platforms were supported by a previous version of
+Perl but have been officially removed from Perl's source code
+as of 5.34:
+
+=over
+
+=item Windows 2000
+
+=item Windows XP
+
+=item Windows Server 2003
+
+=item Windows Vista
+
+=back
+
 =head2 (Perl 5.20)
 
 The following platforms were supported by a previous version of
@@ -2370,14 +2388,6 @@ have worked in 5.12, but supporting code has been removed for 5.14:
 =item Windows ME
 
 =item Windows NT4
-
-=item Windows 2000
-
-=item Windows XP
-
-=item Windows Server 2003
-
-=item Windows Vista
 
 =back
 
