--- a/AUTHORS
+++ b/AUTHORS
@@ -460,6 +460,7 @@ Gerrit P. Haase                <gp@familiehaase.de>
 Gideon Israel Dsouza           <gideon@cpan.org>
 Giles Lean                     <giles@nemeton.com.au>
 Gisle Aas                      <gisle@aas.no>
+GitHub                         <noreply@github.com>
 Glenn D. Golden                <gdg@zplane.com>
 Glenn Linderman                <perl@nevcal.com>
 Gordon J. Miller               <gjm@cray.com>
