--- a/pod/perlmroapi.pod
+++ b/pod/perlmroapi.pod
@@ -81,6 +81,7 @@ stash, and a pointer to your C<mro_alg> structure:
 
 =for apidoc_section MRO
 =for apidoc mro_get_private_data
+=for apidoc Amh|SV*|MRO_GET_PRIVATE_DATA|struct mro_meta *const smeta|const struct mro_alg *const which
 
 To set your private value, call C<Perl_mro_set_private_data()>:
 
