--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -44,6 +44,10 @@ L<Devel::Peek> has been upgraded from version 1.29 to 1.30.
 
 =item *
 
+L<Devel::PPPort> has been upgraded from version 3.60 to 3.62.
+
+=item *
+
 L<Digest> has been upgraded from version 1.17_01 to 1.19.
 
 =item *
@@ -267,9 +271,34 @@ incorrectly.
 
 =head1 Acknowledgements
 
-XXX Generate this with:
+Perl 5.33.3 represents approximately 4 weeks of development since Perl 5.33.2
+and contains approximately 90,000 lines of changes across 740 files from 20
+authors.
 
-  perl Porting/acknowledgements.pl v5.33.2..HEAD
+Excluding auto-generated files, documentation and release tools, there were
+approximately 15,000 lines of changes to 500 .pm, .t, .c and .h files.
+
+Perl continues to flourish into its fourth decade thanks to a vibrant community
+of users and developers.  The following people are known to have contributed
+the improvements that became Perl 5.33.3:
+
+Christian Walde (Mithaldu), Dan Book, Eric Lindblad, Felipe Gasper, H.Merijn
+Brand, Hugo van der Sanden, Ichinose Shogo, James E Keenan, Karen Etheridge,
+Karl Williamson, Nicolas R., Richard Leach, Samanta Navarro, Sawyer X, Steve
+Hay, TAKAI Kousuke, Thibault Duponchelle, Todd Rinaldo, Tomasz Konojacki, Tony
+Cook.
+
+The list above is almost certainly incomplete as it is automatically generated
+from version control history.  In particular, it does not include the names of
+the (very much appreciated) contributors who reported issues to the Perl bug
+tracker.
+
+Many of the changes included in this version originated in the CPAN modules
+included in Perl's core.  We're grateful to the entire CPAN community for
+helping Perl to flourish.
+
+For a more complete list of all of Perl's historical contributors, please see
+the F<AUTHORS> file in the Perl source distribution.
 
 =head1 Reporting Bugs
 
