perlclib: Don't mention toFOO_LC()
There are locales where these macros don't give the right answer for all
legal inputs; so don't mention them.

--- a/pod/perlclib.pod
+++ b/pod/perlclib.pod
@@ -185,8 +185,8 @@ same as ISO-8859-1, often called Latin 1.
  isupper(c)  isUPPER(c)        isUPPER_L1(c)        isUPPER_LC(c)
  isxdigit(c) isXDIGIT(c)       isXDIGIT_L1(c)       isXDIGIT_LC(c)
 
- tolower(c)  toLOWER(c)        toLOWER_L1(c)        toLOWER_LC(c)
- toupper(c)  toUPPER(c)                             toUPPER_LC(c)
+ tolower(c)  toLOWER(c)        toLOWER_L1(c)
+ toupper(c)  toUPPER(c)
 
 To emphasize that you are operating only on ASCII characters, you can
 append C<_A> to each of the macros in the ASCII column: C<isALPHA_A>,
