Ben Cornett is now a Perl author

--- a/AUTHORS
+++ b/AUTHORS
@@ -141,6 +141,7 @@ Bart Kedryna                   <bkedryna@home.com>
 Bas van Sisseren               <bas@quarantainenet.nl>
 Beau Cox
 Ben Carter                     <bcarter@gumdrop.flyinganvil.org>
+Ben Cornett                    <ben@lantern.is>
 Ben Hengst                     <notbenh@cpan.org>
 Ben Morrow                     <ben@morrow.me.uk>
 Ben Okopnik                    <ben@linuxgazette.net>
