Giovanni Tataranni is now a perl author

--- a/AUTHORS
+++ b/AUTHORS
@@ -460,6 +460,7 @@ Gerd Knops                     <gerti@BITart.com>
 Gerrit P. Haase                <gp@familiehaase.de>
 Gideon Israel Dsouza           <gideon@cpan.org>
 Giles Lean                     <giles@nemeton.com.au>
+Giovanni Tataranni             <gtataranni@users.noreply.github.com>
 Gisle Aas                      <gisle@aas.no>
 GitHub                         <noreply@github.com>
 Glenn D. Golden                <gdg@zplane.com>
